--- a/lesson4/client.html
+++ b/lesson4/client.html
@@ -9,6 +9,7 @@
   <form action="http://127.0.0.1:8080/process?hello=world&thread=123" method="POST" enctype="multipart/form-data">
   <input type="text" name="hello" value="sau sheong">
   <input type="text" name="post" value="456">
+  <input type="file" name="uploaded">
   <input type="submit">
   </form>
 </body>
